--- a/README
+++ b/README
@@ -1,15 +1,16 @@
-Codes from idle hours
-Ideas: Ideas that I'd like to put in pratice.
-If you like, tell me or do it youself, be happy.
+Kupfer Plugin: My custom plugins for kupfer  - http://engla.github.io/kupfer/
 
-Kupfer Plugin: My custom plugins for kupfer  - http://kaizer.se/wiki/kupfer/
-Meme - yahoo meme plugin
-4shared - plugin to upload files
-Alternative To - Action to search by in Alternativeto.com
-N900 - actions to control maemo/n900
+WIP/DONE:
 mpris_utils - easy way to control  players that implement mpris2.1
 remmina - list remmina hosts (similar to ssh plugin)
 shortcut - list and execute shortcuts of some application (require xdotool)
 eclipse - call eclipse common task
-snippets - search and copy snippets with online service
 git - git commands for kupfer
+
+
+TODO:
+snippets - search and copy snippets with online service
+N900 - actions to control maemo/n900/meego
+Alternative To - Action to search by in Alternativeto.com
+4shared - plugin to upload files
+Meme - yahoo meme plugin
