--- a/README
+++ b/README
@@ -9,6 +9,7 @@ git - git commands for kupfer
 
 
 TODO:
+Smiley - Pidgin Smiley Indexer
 snippets - search and copy snippets with online service
 N900 - actions to control maemo/n900/meego
 Alternative To - Action to search by in Alternativeto.com
