--- a/README
+++ b/README
@@ -6,6 +6,7 @@ remmina - list remmina hosts (similar to ssh plugin)
 shortcut - list and execute shortcuts of some application (require xdotool)
 eclipse - call eclipse common task
 git - git commands for kupfer
+qrcode - New version for Show QR Code
 
 
 TODO:
@@ -15,3 +16,4 @@ N900 - actions to control maemo/n900/meego
 Alternative To - Action to search by in Alternativeto.com
 4shared - plugin to upload files
 Meme - yahoo meme plugin
+Wifi - gnome network manager
